--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+   "engines": {
+    "node": "20.x"
+  },
   "author": "",
   "license": "ISC",
   "description": ""
